Bug #19779
closed`eval "return"` at top level raises `LocalJumpError`
Updated by andrykonchin (Andrew Konchin) about 3 years ago
- ruby -v set to 3.2.1
Updated by matz (Yukihiro Matsumoto) about 3 years ago
Since we allow top-level return (from 2.4), it is nice to allow this too. But to be frank, it is low priority.
Matz.
Updated by jeremyevans0 (Jeremy Evans) almost 3 years ago
I submitted a pull request to fix this: https://github.com/ruby/ruby/pull/8766
Updated by mame (Yusuke Endoh) almost 3 years ago
@jeremyevans0 (Jeremy Evans) Matz said go ahead in today's dev meeting.
Updated by jeremyevans (Jeremy Evans) almost 3 years ago
- Status changed from Open to Closed
Applied in changeset git|3a88de3ca73052809f5c0bfb4ef8cd435b29ae5f.
Support eval "return" at toplevel
Since Ruby 2.4, return is supported at toplevel. This makes eval "return"
also supported at toplevel.
This mostly uses the same tests as direct return at toplevel, with a couple
differences:
END {return if false} is a SyntaxError, but END {eval "return" if false}
is not an error since the eval is never executed. END {return} is a
SyntaxError, but END {eval "return"} is a LocalJumpError.
The following is a SyntaxError:
However, the following is not, because the eval is never executed:
Fixes [Bug #19779]